# delay-file-parser

./: .gitignore  DelayFileParser.py  README.md  build.py  pyproject.toml  requirements.txt
src/: logger.py
src/parser/: delay_file_reader.py  enums.py  excel_builder.py  folder_scanner.py
src/ui/: app.py  iprogress_tracker.py  mainui.py  parser_frame.py  progress_tracker.py
src/ui/managers/: stdout_redirector.py
tests/files/mock_folder/: mock_file_1.txt
tests/parser/: test_delay_file_reader.py  test_folder_scanner.py
