[project]
name = "train-delay-parser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "altgraph==0.17.4",
    "et_xmlfile==2.0.0",
    "numpy==2.2.2",
    "openpyxl==3.1.5",
    "packaging==24.2",
    "pandas==2.2.3",
    "pefile==2023.2.7",
    "pyinstaller==6.11.1",
    "pyinstaller-hooks-contrib==2025.0",
    "python-dateutil==2.9.0.post0",
    "pytz==2024.2",
    "pywin32-ctypes==0.2.3",
    "six==1.17.0",
    "tk==0.1.0",
    "tzdata==2025.1",
]

[tool.ruff]
line-length = 120  # Match Black's default line length
target-version = "py311"  # Change based on your Python version

[tool.ruff.format]
quote-style = "double"  # Options: "single", "double"
indent-style = "space"  # Options: "space", "tab"
line-ending = "lf"  # Options: "lf", "crlf", "native"
docstring-code-format = true  # Format code inside docstrings

